# ledgerly

./: .coverage  .gitignore  GEMINI.md  README.md  REVISED_UI_PLAN.md  debug_shinhan.py  main.py  pyproject.toml  shinhan_debug.txt  shinhan_tester.py
data/db/: ledgerly.db
data/raw/: kbcard.xls  shinhancard.xls
data/resources/: expenditure_mapping.csv
db/: ledgerly.db
db/ddl/: expenditure.sql
docs/: shinhancard_change_plan.md
ledgerly-tester/: SKILL.md
notebooks/: 01_kbcard_explore.ipynb  02_shinhan_explore.ipynb
notebooks/asset/: asset.ipynb
notebooks/dept/: dept.ipynb
notebooks/expenditure/: 01_kbcard_explore.ipynb  02_shinhan_explore.ipynb  03_cash_expenditure.ipynb
notebooks/income/: 01_income.ipynb
notebooks/report/: asset_report.ipynb  report.ipynb
sql/ddl/: asset.sql  dept.sql  expenditure.sql  income.sql
src/ledgerly/: __init__.py  utils.py
src/ledgerly/app/usecases/: expenditure.py
src/ledgerly/asset/: __init__.py  database.py  processing.py
src/ledgerly/debt/: __init__.py  database.py  processing.py
src/ledgerly/domain/: asset.py  debt.py  expenditure.py
src/ledgerly/expenditure/: __init__.py  cash.py  category.py  config.py  database.py  kbcard.py  shinhan.py
src/ledgerly/infrastructure/: category_mapper.py  config.py
src/ledgerly/infrastructure/exporters/: pdf_exporter.py
src/ledgerly/reports/: __init__.py  asset.py  base.py  exporter.py  monthly.py
src/ledgerly/usecases/: asset.py  debt.py  expenditure.py
tests/: test_domain.py  test_infrastructure.py  test_parsers.py  test_usecases.py
(+9 files in other folders)
