[project]
name = "ledgerly"
version = "0.1.0"
description = "my finance management project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.45",
    "xlrd>=2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
